--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 		<nav>
 			<ul>
 				<li>
-					<a title="About Us" href="#">About Us</a>
+					<a title="About Us" href="#" aria-haspopup="true">About Us</a>
 					<ul>
 						<li>
 							<a title="Sub Link 1" href="#">Sub Link 1</a>
@@ -93,7 +93,7 @@
 					</ul>
 				</li>
 				<li>
-					<a title="Design Corner" href="#">Design Corner</a>
+					<a title="Design Corner" href="#" aria-haspopup="true">Design Corner</a>
 					<ul>
 						<li>
 							<a title="Sub Link 1" href="#">Sub Link 1</a>
@@ -102,7 +102,7 @@
 							<a title="Sub Link 2" href="#">Sub Link 2</a>
 						</li>
 						<li>
-							<a title="Sub Link 3" href="#">Sub Link 3</a>
+							<a title="Sub Link 3" href="#" aria-haspopup="true">Sub Link 3</a>
 							<ul>
 								<li>
 									<a title="Sub Sub Link 1" href="#">Sub Sub Link 1</a>
@@ -115,7 +115,15 @@
 					</ul>
 				</li>
 				<li>
-					<a title="Products" href="#">Products</a>
+					<a title="Products" href="#" aria-haspopup="true">Products</a>
+					<ul>
+						<li>
+							<a title="Sub Link 1" href="#">Sub Link 1</a>
+						</li>
+						<li>
+							<a title="Sub Link 2" href="#">Sub Link 2</a>
+						</li>
+					</ul>
 				</li>
 				<li>
 					<a title="Contact Us" href="#">Contact Us</a>
